<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resta2numActivity">

    <TextView
        android:id="@+id/lblrestap3"
        android:layout_width="196dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:gravity="center|center_horizontal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lbl2"
        app:layout_constraintStart_toStartOf="@+id/lbl2"
        app:layout_constraintTop_toBottomOf="@+id/lbl2" />

    <TextView
        android:id="@+id/lbl2"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginTop="408dp"
        android:text="@string/p3lbltext2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="80dp"
        android:gravity="center|center_horizontal"
        android:text="@string/tituloresta"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="302dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:gravity="center|center_horizontal"
        android:text="@string/p3txtnum1"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/p3txtnum2"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txtnum1p4"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/txtnum1p4"
        app:layout_constraintTop_toBottomOf="@+id/txtnum1p4" />

    <EditText
        android:id="@+id/txtnum1p4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/p3txtnum1f"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtnum2p4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/p3txtnum2f"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnrestap3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:onClick="calcular"
        android:text="@string/p3btntext"
        app:layout_constraintEnd_toEndOf="@+id/txtnum2p4"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/txtnum2p4"
        app:layout_constraintTop_toBottomOf="@+id/txtnum2p4" />
</androidx.constraintlayout.widget.ConstraintLayout>