<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Suma2numActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/titulop3"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="294dp"
        android:layout_height="41dp"
        android:layout_marginTop="60dp"
        android:text="@string/p3txtnum1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="343dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:text="@string/p3txtnum2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/txtnum1p3"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/txtnum1p3"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints="1"
        android:ems="10"
        android:hint="@string/p3txtnum1f"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="@color/rojo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/txtnum2p3"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints="1"
        android:ems="10"
        android:inputType="number"
        android:text="@string/p3txtnum2f"
        android:textAlignment="center"
        android:textColor="@color/rojo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnsumap3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="388dp"
        android:onClick="calcular"
        android:text="@string/p3btntext"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/lblsumap3"
        android:layout_width="210dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/lbl"
        app:layout_constraintStart_toStartOf="@+id/lbl"
        app:layout_constraintTop_toBottomOf="@+id/lbl" />

    <TextView
        android:id="@+id/lbl"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginTop="472dp"
        android:text="@string/p3lbltext"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>