<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="282dp"
        android:layout_height="128dp"
        android:layout_marginTop="52dp"
        android:text="@string/titulop2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/p2btnsuma"
        android:layout_width="299dp"
        android:layout_height="55dp"
        android:layout_marginTop="72dp"
        android:text="@string/p2suma2num"
        android:textColorHint="#FF5858"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/p2btnresta"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:text="@string/p2resta2num"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/p2btnsuma"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/p2btnsuma"
        app:layout_constraintTop_toBottomOf="@+id/p2btnsuma" />
</androidx.constraintlayout.widget.ConstraintLayout>